--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -31,6 +31,13 @@
   .experience-pic {
     vertical-align: bottom;
     width: 100%;
+    will-change: transform;
+    transition: all 0.4s ease;
+  }
+
+  .experience-pic:hover {
+    opacity: 0.6;
+    transform: scale(1.3);
   }
 
   .experience-desc {
